--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <html>
 <head>
-         <meta charset='utf-8'/
+         <meta charset='utf-8'/>
          <title> Pagina inicial</title>
 </head>
 <body>
   <h1> Bem vindo ao meu site</h1>
+   <h2>Navegação</h2>
+   <ul>
+    <li>
+      Home
+    </li>
+    <li>
+      Fotos
+    </li>
+    <li>
+      Tabela
+    </li>
+    <li>
+      Formulario
+    </li>
+   </ul>
   <h3> Site desenvolvido por Gabriel Cassiano</h3>
     <ol>
       <li>
-   <img src="mascara.webp" width="500" height="500" title="arfff!!!"/>
+   <img src="imagens/mascara.webp" width="500" height="500" title="arfff!!!"/>
     </li>
       <li>
-     <img src="cigarro.webp" width="200" height="200" title="tumulo"/>  
+     <img src="imagens/cigarro.webp" width="200" height="200" title="tumulo"/>  
     </li> 
     <li>
-    <img src="robo-bacana.webp" width="1500" height="200" title="robo maneiro"/>
+    <img src="imagens/robo-bacana.webp" width="1500" height="200" title="robo maneiro"/>
     </li>
     <li>
     <img src="https://i.makeagif.com/media/8-18-2016/DyiHLz.gif" width="1500" height="100" title="bum"/>
