alterei uns bagulhos ai

--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
    <h2>Navegação</h2>
    <ul>
     <li>
+      <a href="index.html">
       Home
+      </a>
     </li>
     <li>
+      <a href="photos.html">
       Fotos
+      </a>
     </li>
     <li>
+      <a href="tabela.html">
       Tabela
+     </a>
     </li>
     <li>
+      <a href="formulario.html">
       Formulario
+      </a>
     </li>
    </ul>
   <h3> Site desenvolvido por Gabriel Cassiano</h3>
