--- a/tabela.html
+++ b/tabela.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de tabela</title>
 </head>
 <body>
     <h1>bem vindos a tabela</h1>
+    <h2>Navegação</h2>
+    <ul>
+     <li>
+       <a href="index.html">
+       Home
+       </a>
+     </li>
+     <li>
+       <a href="photos.html">
+       Fotos
+       </a>
+     </li>
+     <li>
+       <a href="tabela.html">
+       Tabela
+      </a>
+     </li>
+     <li>
+       <a href="formulario.html">
+       Formulario
+       </a>
+     </li>
+    </ul>
+    
 </body>
 </html> 
