--- a/formulario.html
+++ b/formulario.html
@@ -29,5 +29,132 @@
        </a>
      </li>
     </ul>
+    <label>Input button</label>
+    <input type="button">
+     <br />
+     <br />
+
+     <label>caixas de opções marcado ou não</label>
+<input type="checkbox">
+<br />
+<br />
+
+<label>seleção de cores</label>
+<input type="color">
+<br />
+<br />
+
+<label>data</label>
+<input type="date">
+<br />
+<br />
+<label>caixas de datas utc</label>
+<input type="datetime-local">
+<br />
+<br />
+<label>email</label>
+<input type="email">
+<br />
+<br />
+<label>arquivos</label>
+<input type="file">
+<br />
+<br />
+<label>escondi</label>
+<input type="hidden">
+<br />
+<br />
+<label>imagens</label>
+<input type="image">
+<br />
+<br />
+<label>mês</label>
+<input type="month">
+<br />
+<br />
+<label>caixa de numeros</label>
+<input type="number">
+<br />
+<br />
+<label>senha</label>
+<input type="password">
+<br />
+<br />
+<label>opção unica</label>
+<input type="radio">
+<br />
+<br />
+<label>volume</label>
+<input type="range">
+<br />
+<br />
+<label>reseta o formulario</label>
+<input type="reset">
+<br />
+<br />
+<label>pesquisa</label>
+<input type="search">
+<br />
+<br />
+<label>inserir</label>
+<input type="submit">
+<br />
+<br />
+<label>telefone</label>
+<input type="tel">
+<br />
+<br />
+<label>entrada genérica</label>
+<input type="text">
+<br/>
+<br/>
+<label>tempo</label>
+<input type="time">
+<br />
+<br />
+<label>link</label>
+<input type="url">
+<br />
+<br />
+<label>caixa com semanas</label>
+<input type="week">
+<br />
+<br />
+<form action="" method="">
+<label> Nome completo</label><br/>
+<input type="text"/>
+<br/>
+<label>Data de nascimento</label><br/>
+<input type="date"/>
+<br/>
+<label>CPF</label>
+<input type="text"/>
+<label>RG</label>
+<input type="text"/>
+<br><br>
+<label>Foto do cartão de crédito frente</label>
+<br>
+<input type="file"/>
+<br>
+<label>Foto do cartão de crédito verso</label>
+<br>
+<input type="file"/>
+<br>
+<label>pets preferidos</label><br>
+<input type="checkbox"/>Cachorro<br>
+<input type="checkbox"/>Gato<br>
+<input type="checkbox"/>Calopsita<br>
+<input type="checkbox"/>Coelho<br>
+<br>
+<label>sexo</label><br>
+<input type="radio" name="sexo"/>Masculino <br>
+<input type="radio" name="sexo"/>Homem <br>
+<input type="radio" name="sexo"/>Mulher <br>
+<input type="radio" name="sexo"/>Não binario <br>
+<input type="radio" name="sexo"/>Feminino <br>
+<input type="radio" name="sexo"/>Outros <br>
+<button type="submit"> Salvar</button>
+<button type="reset"> Limpar form</button>
+</form>
 </body>
 </html>
