--- a/formulario.html
+++ b/formulario.html
@@ -8,27 +8,32 @@
     <h1>bem vindos aos formulario</h1>
     <h2>Navegação</h2>
     <ul>
-     <li>
-       <a href="index.html">
-       Home
+      <li>
+        <a href="index.html">
+        Home
+        </a>
+      </li>
+      <li>
+        <a href="fotos.html">
+        Fotos
+        </a>
+      </li>
+      <li>
+        <a href="tabela.html">
+        Tabela
        </a>
-     </li>
-     <li>
-       <a href="photos.html">
-       Fotos
-       </a>
-     </li>
-     <li>
-       <a href="tabela.html">
-       Tabela
-      </a>
-     </li>
-     <li>
-       <a href="formulario.html">
-       Formulario
-       </a>
-     </li>
-    </ul>
+      </li>
+      <li>
+        <a href="formulario.html">
+         </li>
+        Formulario
+        </a>
+        <li>
+          <a href="cadastro.html">
+             Cadastro
+          </a>
+        </li>
+ </ul>
     <label>Input button</label>
     <input type="button">
      <br />
@@ -147,7 +152,6 @@
 <input type="checkbox"/>Coelho<br>
 <br>
 <label>sexo</label><br>
-<input type="radio" name="sexo"/>Masculino <br>
 <input type="radio" name="sexo"/>Homem <br>
 <input type="radio" name="sexo"/>Mulher <br>
 <input type="radio" name="sexo"/>Não binario <br>
