--- a/fotos.html
+++ b/fotos.html
@@ -9,27 +9,32 @@
     <h1>bem vindos a pagina de Fotos</h1>
     <h2>Navegação</h2>
     <ul>
-     <li>
-       <a href="index.html">
-       Home
+      <li>
+        <a href="index.html">
+        Home
+        </a>
+      </li>
+      <li>
+        <a href="fotos.html">
+        Fotos
+        </a>
+      </li>
+      <li>
+        <a href="tabela.html">
+        Tabela
        </a>
-     </li>
-     <li>
-       <a href="photos.html">
-       Fotos
-       </a>
-     </li>
-     <li>
-       <a href="tabela.html">
-       Tabela
-      </a>
-     </li>
-     <li>
-       <a href="formulario.html">
-       Formulario
-       </a>
-     </li>
-    </ul>
+      </li>
+      <li>
+        <a href="formulario.html">
+         </li>
+        Formulario
+        </a>
+        <li>
+          <a href="cadastro.html">
+             Cadastro
+          </a>
+        </li>
+ </ul>
 <img src="imagens/gettyimages-175169304-612x612.jpg" width="612" height="612" title="PAMMMM"/>
 <p>
  O piano é um instrumento musical de cordas percutidas que possui uma longa tradição na música ocidental, sendo amplamente utilizado em diversos gêneros, do clássico ao popular. A imagem mostra um piano de cauda, caracterizado pelo seu formato elegante e construção robusta, com uma tampa que pode ser aberta para amplificar o som. O piano de cauda destaca-se pela qualidade sonora superior e pelo controle dinâmico que oferece ao pianista, permitindo nuances delicadas e poderosas. Além do próprio instrumento, a imagem também exibe um banco acolchoado, fundamental para o conforto do músico durante longas sessões de prática ou apresentação. Tradicionalmente, os pianos são fabricados em madeira e possuem um conjunto de teclas pretas e brancas que, quando pressionadas, ativam martelos internos que tocam as cordas correspondentes, produzindo sons harmônicos e ricos. O piano é fundamental na formação musical, usado tanto para acompanhamento quanto para performance solo, e sua versatilidade o torna um dos instrumentos mais queridos e estudados no mundo da música.
