--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </a>
     </li>
     <li>
-      <a href="photos.html">
+      <a href="fotos.html">
       Fotos
       </a>
     </li>
@@ -24,10 +24,15 @@
     </li>
     <li>
       <a href="formulario.html">
+       </li>
       Formulario
       </a>
-    </li>
-   </ul>
+      <li>
+        <a href="cadastro.html">
+           Cadastro
+        </a>
+      </li>
+</ul>
   <h3> Site desenvolvido por Gabriel Cassiano</h3>
 </body>
 </html>
