--- a/formulario.html
+++ b/formulario.html
@@ -33,6 +33,11 @@
              Cadastro
           </a>
         </li>
+        <li>
+          <a href="layout.html">
+             layout
+          </a>
+      </li>
  </ul>
     <label>Input button</label>
     <input type="button">
