--- a/fotos.html
+++ b/fotos.html
@@ -34,6 +34,11 @@
              Cadastro
           </a>
         </li>
+        <li>
+          <a href="layout.html">
+             layout
+          </a>
+      </li>
  </ul>
 <img src="imagens/gettyimages-175169304-612x612.jpg" width="612" height="612" title="PAMMMM"/>
 <p>
