--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
            Cadastro
         </a>
       </li>
+      <li>
+        <a href="layout.html">
+           layout
+        </a>
+    </li>
 </ul>
   <h3> Site desenvolvido por Gabriel Cassiano</h3>
 </body>
