--- a/cadastro.html
+++ b/cadastro.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>bem vindos aos formulario</h1>
+    <h1>bem vindos ao cadastro</h1>
     <h2>Navegação</h2>
     <ul>
      <li>
