--- a/tabela.html
+++ b/tabela.html
@@ -32,6 +32,11 @@
              Cadastro
           </a>
         </li>
+        <li>
+            <a href="layout.html">
+               layout
+            </a>
+        </li>
  </ul>
       <br>
 
