--- a/javascript.html
+++ b/javascript.html
@@ -26,7 +26,7 @@ else
 {alert ("Volte mais tarde e tente novamente")
 }
 */
-var saldo = Number(prompt("digite seu saldo"))
+/*var saldo = Number(prompt("digite seu saldo"))
 if(saldo <= 499)
 {alert("fica em casa, besta")}
 else if( saldo == 500)
@@ -37,5 +37,16 @@ else if( saldo >= 701 && saldo <= 1000)
 {alert("vai pra minas gerais")}
 else
 {alert("vai pro nordeste")}
+*/
+var n = Number(prompt("Digite um numero"))
+//var t = Number (prompt("quantas tabuadas? "))
+for(var i = 0; i <= 10; i++)
+{
+if(i%2==0)
 
+{ soma=n*i
+    {if(soma%2==0)
+document.write("<h3>"+n+"X"+i+"="+soma+" </h3>")
+}}
+}
 </script>
