--- a/bingo.html
+++ b/bingo.html
@@ -81,5 +81,40 @@
         </tbody>
     </thead>
 </table>
+<script>
+    var B = []
+    var I = []
+    var N = []
+    var G = []
+    var O = []
+    var sorteio = []
+    for(var i = 1; i <= 75; i++)
+{sorteio.push(i)}
+    for(var i = 1; i <= 15; i++)
+{
+    B.push(i)
+}
+for(var i = 16; i <= 30; i++)
+{
+    I.push(i)
+}    
+for(var i = 31; i <= 45; i++)
+if(i%2==0)
+
+{
+    N.push(i)
+}    
+document.write("<h3>" ,N,"<h3>")
+for(var i = 46; i <= 60; i++)
+
+{
+    G.push(i)
+}    
+for(var i = 61; i <= 75; i++)
+
+{
+    O.push(i)
+}
+</script>
 </body>
 </html>
